@@ -1,32 +1,15 @@
-/*
- * Copyright 2000-2017 JetBrains s.r.o.
- *
- * Licensed under the Apache License, Version 2.0 (the "License");
- * you may not use this file except in compliance with the License.
- * You may obtain a copy of the License at
- *
- * http://www.apache.org/licenses/LICENSE-2.0
- *
- * Unless required by applicable law or agreed to in writing, software
- * distributed under the License is distributed on an "AS IS" BASIS,
- * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
- * See the License for the specific language governing permissions and
- * limitations under the License.
- */
+// Copyright 2000-2019 JetBrains s.r.o. Use of this source code is governed by the Apache 2.0 license that can be found in the LICENSE file.
 package com.intellij.openapi.wm.impl;
 
 import com.intellij.ide.IdeEventQueue;
-import com.intellij.ide.UiActivity;
 import com.intellij.ide.UiActivityMonitor;
 import com.intellij.openapi.Disposable;
 import com.intellij.openapi.actionSystem.DataContext;
 import com.intellij.openapi.actionSystem.PlatformDataKeys;
-import com.intellij.openapi.application.Application;
 import com.intellij.openapi.application.ApplicationActivationListener;
 import com.intellij.openapi.application.ApplicationManager;
 import com.intellij.openapi.application.ModalityState;
 import com.intellij.openapi.application.ex.ApplicationManagerEx;
-import com.intellij.openapi.components.impl.ServiceManagerImpl;
 import com.intellij.openapi.diagnostic.Logger;
 import com.intellij.openapi.project.Project;
 import com.intellij.openapi.ui.popup.JBPopup;
@@ -35,9 +18,7 @@ import com.intellij.openapi.util.registry.Registry;
 import com.intellij.openapi.wm.FocusRequestor;
 import com.intellij.openapi.wm.IdeFocusManager;
 import com.intellij.openapi.wm.IdeFrame;
-import com.intellij.openapi.wm.WindowManager;
 import com.intellij.openapi.wm.ex.IdeFocusTraversalPolicy;
-import com.intellij.openapi.wm.ex.LayoutFocusTraversalPolicyExt;
 import com.intellij.ui.popup.AbstractPopup;
 import com.intellij.util.concurrency.EdtExecutorService;
 import com.intellij.util.containers.ContainerUtil;
@@ -49,24 +30,16 @@ import javax.swing.*;
 import java.awt.*;
 import java.awt.event.FocusEvent;
 import java.awt.event.WindowEvent;
-import java.beans.PropertyChangeEvent;
-import java.beans.PropertyChangeListener;
 import java.text.SimpleDateFormat;
-import java.util.*;
 import java.util.List;
+import java.util.*;
 import java.util.concurrent.TimeUnit;
 import java.util.concurrent.atomic.AtomicBoolean;
-import java.util.stream.Collectors;
 
-public class FocusManagerImpl extends IdeFocusManager implements Disposable {
+public final class FocusManagerImpl extends IdeFocusManager implements Disposable {
   private static final Logger LOG = Logger.getInstance(FocusManagerImpl.class);
-  private static final UiActivity FOCUS = new UiActivity.Focus("awtFocusRequest");
-  private static final UiActivity TYPEAHEAD = new UiActivity.Focus("typeahead");
 
-  private final Application myApp;
-
-  private final boolean isInternalMode = ApplicationManagerEx.getApplicationEx().isInternal();
-  private final LinkedList<FocusRequestInfo> myRequests = new LinkedList<>();
+  private final List<FocusRequestInfo> myRequests = new LinkedList<>();
 
   private final IdeEventQueue myQueue;
 
@@ -76,7 +49,6 @@ public class FocusManagerImpl extends IdeFocusManager implements Disposable {
   private final Set<FurtherRequestor> myValidFurtherRequestors = new HashSet<>();
 
   private final Set<ActionCallback> myTypeAheadRequestors = new HashSet<>();
-  private final UiActivityMonitor myActivityMonitor;
   private boolean myTypeaheadEnabled = true;
 
   private final Map<IdeFrame, Component> myLastFocused = ContainerUtil.createWeakValueMap();
@@ -87,16 +59,16 @@ public class FocusManagerImpl extends IdeFocusManager implements Disposable {
   private IdeFrame myLastFocusedFrame;
 
   @SuppressWarnings("UnusedParameters")  // the dependencies are needed to ensure correct loading order
-  public FocusManagerImpl(ServiceManagerImpl serviceManager, WindowManager wm, UiActivityMonitor monitor) {
-    myApp = ApplicationManager.getApplication();
+  public FocusManagerImpl() {
+    UiActivityMonitor.getInstance();
+
     myQueue = IdeEventQueue.getInstance();
-    myActivityMonitor = monitor;
 
     myFocusedComponentAlarm = new EdtAlarm();
     myForcedFocusRequestsAlarm = new EdtAlarm();
 
     final AppListener myAppListener = new AppListener();
-    myApp.getMessageBus().connect().subscribe(ApplicationActivationListener.TOPIC, myAppListener);
+    ApplicationManager.getApplication().getMessageBus().connect().subscribe(ApplicationActivationListener.TOPIC, myAppListener);
 
     IdeEventQueue.getInstance().addDispatcher(e -> {
       if (e instanceof FocusEvent) {
@@ -123,12 +95,9 @@ public class FocusManagerImpl extends IdeFocusManager implements Disposable {
       return false;
     }, this);
 
-    KeyboardFocusManager.getCurrentKeyboardFocusManager().addPropertyChangeListener("focusedWindow", new PropertyChangeListener() {
-      @Override
-      public void propertyChange(PropertyChangeEvent evt) {
-        if (evt.getNewValue() instanceof IdeFrame) {
-          myLastFocusedFrame = (IdeFrame)evt.getNewValue();
-        }
+    KeyboardFocusManager.getCurrentKeyboardFocusManager().addPropertyChangeListener("focusedWindow", evt -> {
+      if (evt.getNewValue() instanceof IdeFrame) {
+        myLastFocusedFrame = (IdeFrame)evt.getNewValue();
       }
     });
   }
@@ -138,10 +107,12 @@ public class FocusManagerImpl extends IdeFocusManager implements Disposable {
     return myLastFocusedFrame;
   }
 
+  @Override
   public ActionCallback requestFocusInProject(@NotNull Component c, @Nullable Project project) {
     if (ApplicationManagerEx.getApplicationEx().isActive() || !Registry.is("suppress.focus.stealing")) {
       c.requestFocus();
-    } else {
+    }
+    else {
       c.requestFocusInWindow();
     }
     return ActionCallback.DONE;
@@ -162,7 +133,7 @@ public class FocusManagerImpl extends IdeFocusManager implements Disposable {
   public void recordFocusRequest(Component c, boolean forced) {
     myRequests.add(new FocusRequestInfo(c, new Throwable(), forced));
     if (myRequests.size() > 200) {
-      myRequests.removeFirst();
+      myRequests.remove(0);
     }
   }
 
@@ -252,20 +223,7 @@ public class FocusManagerImpl extends IdeFocusManager implements Disposable {
                                                 IdeEventQueue.getInstance().runnablesWaitingForFocusChangeState();
                                        }
                                      },
-                                     true).doWhenProcessed(() -> {
-      myTypeAheadRequestors.remove(done);
-    }));
-  }
-
-  private void revalidateFurtherRequestors() {
-    Iterator<FurtherRequestor> requestorIterator = myValidFurtherRequestors.iterator();
-    while (requestorIterator.hasNext()) {
-      FurtherRequestor each = requestorIterator.next();
-      if (each.isExpired()) {
-        requestorIterator.remove();
-        Disposer.dispose(each);
-      }
-    }
+                                     true).doWhenProcessed(() -> myTypeAheadRequestors.remove(done)));
   }
 
   @Override
@@ -289,7 +247,7 @@ public class FocusManagerImpl extends IdeFocusManager implements Disposable {
       if (permOwner != null) {
         result = permOwner;
       }
-      
+
       if (UIUtil.isMeaninglessFocusOwner(result)) {
         result = KeyboardFocusManager.getCurrentKeyboardFocusManager().getActiveWindow();
       }
@@ -334,7 +292,8 @@ public class FocusManagerImpl extends IdeFocusManager implements Disposable {
         if (ApplicationManager.getApplication().isActive()) {
           if (window instanceof JFrame && ((JFrame)window).getState() == Frame.ICONIFIED) {
             ((JFrame)window).setState(Frame.NORMAL);
-          } else {
+          }
+          else {
             window.toFront();
           }
         }
@@ -375,10 +334,9 @@ public class FocusManagerImpl extends IdeFocusManager implements Disposable {
     }
   }
 
-
-  static class EdtAlarm {
+  final static class EdtAlarm {
     private final Set<EdtRunnable> myRequests = new HashSet<>();
-    
+
     public void cancelAllRequests() {
       for (EdtRunnable each : myRequests) {
         each.expire();
@@ -395,7 +353,7 @@ public class FocusManagerImpl extends IdeFocusManager implements Disposable {
   private class AppListener implements ApplicationActivationListener {
 
     @Override
-    public void delayedApplicationDeactivated(IdeFrame ideFrame) {
+    public void delayedApplicationDeactivated(@NotNull IdeFrame ideFrame) {
         final Component owner = KeyboardFocusManager.getCurrentKeyboardFocusManager().getFocusOwner();
         Component parent = UIUtil.findUltimateParent(owner);
 
@@ -403,54 +361,11 @@ public class FocusManagerImpl extends IdeFocusManager implements Disposable {
           myLastFocusedAtDeactivation.put(ideFrame, owner);
         }
     }
-
-    private void focusLastFocusedComponent(IdeFrame ideFrame) {
-      final KeyboardFocusManager mgr = KeyboardFocusManager.getCurrentKeyboardFocusManager();
-      if (mgr.getFocusOwner() == null) {
-        Component c = getComponent(myLastFocusedAtDeactivation, ideFrame);
-        if (c == null || !c.isShowing()) {
-          c = getComponent(myLastFocusedAtDeactivation, ideFrame);
-        }
-
-        final boolean mouseEventAhead = IdeEventQueue.isMouseEventAhead(null);
-        if (c != null && c.isShowing() && !mouseEventAhead) {
-          final LayoutFocusTraversalPolicyExt policy = LayoutFocusTraversalPolicyExt.findWindowPolicy(c);
-          if (policy != null) {
-            policy.setNoDefaultComponent(true, FocusManagerImpl.this);
-          }
-          requestFocus(c, false).doWhenProcessed(() -> {
-            if (policy != null) {
-              policy.setNoDefaultComponent(false, FocusManagerImpl.this);
-            }
-          });
-        }
-      }
-
-      myLastFocusedAtDeactivation.remove(ideFrame);
-    }
-  }
-
-  @Nullable
-  private static Component getComponent(@NotNull Map<IdeFrame, Component> map, IdeFrame frame) {
-    return map.get(frame);
   }
 
   @Override
   public JComponent getFocusTargetFor(@NotNull JComponent comp) {
     return IdeFocusTraversalPolicy.getPreferredFocusedComponent(comp);
-  }
-
-  public List<JBPopup> getChildPopups(@NotNull final Component component) {
-    return AbstractPopup.all.toStrongList().stream().filter(popup -> {
-      Component owner = popup.getOwner();
-      while (owner != null) {
-        if (owner.equals(component)) {
-          return true;
-        }
-        owner = owner.getParent();
-      }
-      return false;
-    }).collect(Collectors.toList());
   }
 
   @Override
@@ -460,7 +375,7 @@ public class FocusManagerImpl extends IdeFocusManager implements Disposable {
 
     if (focused == comp || SwingUtilities.isDescendingFrom(focused, comp)) return focused;
 
-    List<JBPopup> popups = getChildPopups(comp);
+    List<JBPopup> popups = AbstractPopup.getChildPopups(comp);
     for (JBPopup each : popups) {
       if (each.isFocused()) return focused;
     }
@@ -479,40 +394,38 @@ public class FocusManagerImpl extends IdeFocusManager implements Disposable {
       }
     }
     else {
-      Window[] windows = Window.getWindows();
-      for (Window each : windows) {
-        if (each.isActive()) {
-          if (each instanceof JFrame) {
-            toFocus = getFocusTargetFor(((JFrame)each).getRootPane());
-            break;
-          } else if (each instanceof JDialog) {
-            toFocus = getFocusTargetFor(((JDialog)each).getRootPane());
-            break;
-          } else if (each instanceof JWindow) {
-            toFocus = getFocusTargetFor(((JWindow)each).getRootPane());
-            break;
-          }          
-        }
+      Optional<Component> toFocusOptional = Arrays.stream(Window.getWindows()).
+        filter(window -> window instanceof RootPaneContainer).
+        filter(window -> ((RootPaneContainer)window).getRootPane() != null).
+        filter(window -> window.isActive()).
+        findFirst().
+        map(w -> getFocusTargetFor(((RootPaneContainer)w).getRootPane()));
+
+      if (toFocusOptional.isPresent()) {
+        toFocus = toFocusOptional.get();
       }
-    } 
-    
+    }
+
     if (toFocus != null) {
       if (ApplicationManagerEx.getApplicationEx().isActive() || !Registry.is("suppress.focus.stealing")) {
         toFocus.requestFocus();
-      } else {
+      }
+      else {
         toFocus.requestFocusInWindow();
       }
       return ActionCallback.DONE;
     }
-    
-    
+
+
     return ActionCallback.DONE;
   }
 
   @Override
   public boolean isFocusTransferEnabled() {
-    if (Registry.is("focus.fix.lost.cursor")) return true;
-    return myApp.isActive() || !Registry.is("actionSystem.suspendFocusTransferIfApplicationInactive");
+    if (Registry.is("focus.fix.lost.cursor")) {
+      return true;
+    }
+    return ApplicationManager.getApplication().isActive() || !Registry.is("actionSystem.suspendFocusTransferIfApplicationInactive");
   }
 
   private static void assertDispatchThread() {
